--- a/docs/source/tutorials/3_Analyse movements.ipynb
+++ b/docs/source/tutorials/3_Analyse movements.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "import mj_envs\n",
+    "import myosuite\n",
     "import gym\n",
     "import skvideo.io\n",
     "import numpy as np\n",
@@ -64,8 +64,6 @@
     "data_store = []\n",
     "for _ in range(10): # 10 episodes\n",
     "    for _ in range(100): # 100 samples for each episode\n",
-    "#         frame = env.sim.render(width=400, height=400,mode='offscreen', camera_name=None)\n",
-    "#         frames.append(frame[::-1,:,:])\n",
     "        o = env.get_obs()\n",
     "        a = pi.get_action(o)[0]\n",
     "        next_o, r, done, ifo = env.step(a) # take a random action\n",
