--- a/docs/source/tutorials/2_Load_policy.ipynb
+++ b/docs/source/tutorials/2_Load_policy.ipynb
@@ -60,12 +60,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define a discrete sequence of positions to test\n",
     "AngleSequence = [60, 30, 30, 60, 80, 80, 60, 30, 80, 30, 80, 60]\n",
     "env.reset()\n",
     "frames = []\n",
     "for ep in range(len(AngleSequence)):\n",
     "    print(\"Ep {} of {} testing angle {}\".format(ep, len(AngleSequence), AngleSequence[ep]))\n",
     "    env.env.target_jnt_value = [np.deg2rad(AngleSequence[int(ep)])]\n",
+    "    env.env.target_type = 'fixed'\n",
     "    env.env.update_target()\n",
     "    for _ in range(40):\n",
     "        frame = env.sim.render(width=400, height=400,mode='offscreen', camera_name=None)\n",
@@ -92,9 +94,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "O2MConverter",
+   "display_name": "testMS",
    "language": "python",
-   "name": "myenv"
+   "name": "testms"
   },
   "language_info": {
    "codemirror_mode": {
@@ -106,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
