fix notebook num 4

--- a/docs/source/tutorials/4_Train_policy.ipynb
+++ b/docs/source/tutorials/4_Train_policy.ipynb
@@ -113,6 +113,8 @@
     "for ep in range(len(AngleSequence)):\n",
     "    print(\"Ep {} of {} testing angle {}\".format(ep, len(AngleSequence), AngleSequence[ep]))\n",
     "    env.env.target_jnt_value = [np.deg2rad(AngleSequence[int(ep)])]\n",
+    "    env.env.target_type = 'fixed'\n",
+    "    env.env.weight_range=(0,0)\n",
     "    env.env.update_target()\n",
     "    for _ in range(40):\n",
     "        frame = env.sim.render(width=400, height=400,mode='offscreen', camera_name=None)\n",
