Small typo in Tutorial 4

--- a/docs/source/tutorials/4_Train_policy.ipynb
+++ b/docs/source/tutorials/4_Train_policy.ipynb
@@ -91,8 +91,9 @@
     "            num_samples=0,\n",
     "            save_freq=100,\n",
     "            evaluation_rollouts=10)\n",
+    "\n",
     "print(\"========================================\")\n",
-    "print(\"Job Finished. \n",
+    "print(\"Job Finished.\") \n",
     "print(\"========================================\")\n"
    ]
   },
@@ -133,9 +134,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "testMS",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "testms"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -147,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
