MODELS[major]: Replacing compiled models with raw XML models

--- a/docs/source/tutorials/5_Move_Hand_Fingers.ipynb
+++ b/docs/source/tutorials/5_Move_Hand_Fingers.ipynb
@@ -128,7 +128,7 @@
    ],
    "source": [
     "import mujoco_py\n",
-    "mjcModel  = mujoco_py.load_model_from_path(\"../../../myosuite/envs/myo/assets/hand/myo_hand_pose.mjb\")\n",
+    "mjcModel  = mujoco_py.load_model_from_path(\"../../../myosuite/envs/myo/assets/hand/myo_hand_pose.xml\")\n",
     "sim_mjc = mujoco_py.MjSim(mjcModel)\n",
     "print(\"Muscles:\")\n",
     "for i in range(len(mjcModel.actuator_names)):\n",
