--- a/docs/source/tutorials/4a_deprl.ipynb
+++ b/docs/source/tutorials/4a_deprl.ipynb
@@ -14,37 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'deprl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[2], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mgym\u001B[39;00m\u001B[38;5;241m,\u001B[39m \u001B[38;5;21;01mmyosuite\u001B[39;00m\u001B[38;5;241m,\u001B[39m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mdeprl\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnp\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mskvideo\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mio\u001B[39;00m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'deprl'"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'deprl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[3], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mgym\u001B[39;00m\u001B[38;5;241m,\u001B[39m \u001B[38;5;21;01mmyosuite\u001B[39;00m\u001B[38;5;241m,\u001B[39m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mdeprl\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnp\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mskvideo\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mio\u001B[39;00m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'deprl'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "\n",
-    "import gym, myosuite, os\n",
-    "import deprl\n",
-    "import numpy as np\n",
-    "import skvideo.io\n"
+    "import gym, myosuite\n",
+    "import deprl\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -58,72 +33,60 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from IPython.display import HTML\n",
-    "from base64 import b64encode\n",
-    "\n",
-    "def show_video(video_path, video_width = 400):\n",
-    "\n",
-    "  video_file = open(video_path, \"r+b\").read()\n",
-    "\n",
-    "  video_url = f\"data:video/mp4;base64,{b64encode(video_file).decode()}\"\n",
-    "  return HTML(f\"\"\"<video autoplay width={video_width} controls><source src=\"{video_url}\"></video>\"\"\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "T = 500\n",
-    "\n",
+    "T = 1000 # length of episode\n",
+    "N = 5 # number of episodes\n",
     "env = gym.make('myoLegWalk-v0')\n",
     "obs = env.reset()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "policy = deprl.load_baseline(env)\n",
     "\n",
-    "obs = env.reset()\n",
-    "frames = []\n",
-    "steps = 0\n",
-    "while True:\n",
-    "    action = policy(obs)\n",
-    "    obs, rew, done, info = env.step(action)\n",
-    "    frame = env.sim.render(width=400, height=400,mode='offscreen', camera_name=None)\n",
-    "    frames.append(frame[::-1,:,:])\n",
-    "    if done or steps > T:\n",
-    "        break\n",
-    "env.close()\n",
-    "skvideo.io.vwrite('videos/deprl_myoleg.mp4', np.asarray(frames),outputdict={\"-pix_fmt\": \"yuv420p\"})\n",
-    "show_video('videos/arm.mp4')"
-   ]
+    "for i in range(N):\n",
+    "    obs = env.reset()\n",
+    "    steps = 0\n",
+    "    while True:\n",
+    "        obs = env.reset()\n",
+    "        action = policy(obs)\n",
+    "        obs, rew, done, info = env.step(action)\n",
+    "        env.mj_render()\n",
+    "        if done or steps > T:\n",
+    "            break\n",
+    "env.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If you want to load your own policy, replace `deprl.load_baseline(env)` with `deprl.load(path, env)`. This will automatically load it for you. We also provide more advanced commands like `python -m deprl.play --path /folder/` to setup a visualization script."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
