--- a/docs/source/tutorials/4a_deprl.ipynb
+++ b/docs/source/tutorials/4a_deprl.ipynb
@@ -2,93 +2,113 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "If you just want to load and visualize the baseline, try this code."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "If you just want to load and visualize the baseline, try this code."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MyoSuite:> Registering Myo Envs\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import gym, myosuite\n",
-    "import deprl\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "import deprl\n",
+    "import gym"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "T = 1000 # length of episode\n",
-    "N = 5 # number of episodes\n",
     "env = gym.make('myoLegWalk-v0')\n",
     "obs = env.reset()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[32mLoading experiment from ./baselines_DEPRL/myoLegWalk_20230514/myoLeg\u001b[0m\n",
+      "\u001b[1m\u001b[32mStochastic Switch-DEP. Paper version.\u001b[0m\n",
+      "\u001b[1m\u001b[32m\n",
+      "Loading weights from ./baselines_DEPRL/myoLegWalk_20230514/myoLeg/checkpoints/step_150000000.pt\u001b[0m\n",
+      "\u001b[1m\u001b[32mLoading only actor weights.\u001b[0m\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "policy = deprl.load_baseline(env)\n",
+    "\n",
+    "obs = env.reset()\n",
+    "for _ in range(T):\n",
+    "    action = policy(obs)\n",
+    "    obs, rew, done, info = env.step(action)\n",
+    "    if done:\n",
+    "        break\n",
+    "env.close()\n",
+    "print('Done!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "If you want to load your own policy, replace `deprl.load_baseline(env)` with `deprl.load(path, env)`. This will automatically load it for you. We also provide more advanced commands like `python -m deprl.play --path /folder/` to setup a visualization script."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "policy = deprl.load_baseline(env)\n",
-    "\n",
-    "for i in range(N):\n",
-    "    obs = env.reset()\n",
-    "    steps = 0\n",
-    "    while True:\n",
-    "        obs = env.reset()\n",
-    "        action = policy(obs)\n",
-    "        obs, rew, done, info = env.step(action)\n",
-    "        env.mj_render()\n",
-    "        if done or steps > T:\n",
-    "            break\n",
-    "env.close()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "If you want to load your own policy, replace `deprl.load_baseline(env)` with `deprl.load(path, env)`. This will automatically load it for you. We also provide more advanced commands like `python -m deprl.play --path /folder/` to setup a visualization script."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "deprl",
    "language": "python",
-   "name": "python3"
+   "name": "deprl"
   },
   "language_info": {
    "codemirror_mode": {
