--- a/docs/source/tutorials/4b_reflex/MyoSuite_MyoReflex_Walk.ipynb
+++ b/docs/source/tutorials/4b_reflex/MyoSuite_MyoReflex_Walk.ipynb
@@ -55,7 +55,7 @@
     "    _, isDone, _, _ = Myo_env.run_reflex_step()\n",
     "\n",
     "    if isDone:\n",
-    "        print('Stopped')\n",
+    "        print(f\"Stopped at - {timestep}\")\n",
     "        break\n",
     "    \n",
     "skvideo.io.vwrite(\"MyoReflex_output.mp4\", \n",
