Controller param update, document update

--- a/docs/source/tutorials/4b_reflex/MyoSuite_MyoReflex_Walk.ipynb
+++ b/docs/source/tutorials/4b_reflex/MyoSuite_MyoReflex_Walk.ipynb
@@ -42,8 +42,7 @@
     "steps = int(sim_time/dt)\n",
     "frames = []\n",
     "\n",
-    "#params = np.loadtxt('baseline_params.txt')\n",
-    "params = np.loadtxt('new_test.txt')\n",
+    "params = np.loadtxt('baseline_params.txt')\n",
     "\n",
     "Myo_env = ReflexCtrInterface.MyoLegReflex()\n",
     "Myo_env.reset()\n",
