--- a/docs/source/tutorials/1_Get_Started.ipynb
+++ b/docs/source/tutorials/1_Get_Started.ipynb
@@ -46,11 +46,14 @@
    "outputs": [],
    "source": [
     "env = gym.make('myoElbowPose1D6MRandom-v0')\n",
-    "print('List of cameras available', env.sim.model.camera_names)\n",
+    "print('List of cameras available', [env.sim.model.camera(i).name for i in range(env.sim.model.ncam)])\n",
     "env.reset()\n",
     "frames = []\n",
     "for _ in range(100):\n",
-    "    frame = env.sim.render(width=400, height=400,mode='offscreen')\n",
+    "    frame = env.sim.renderer.render_offscreen(\n",
+    "                        width=400,\n",
+    "                        height=400,\n",
+    "                        camera_id=0)\n",
     "    frames.append(frame[::-1,:,:])\n",
     "    env.step(env.action_space.sample()) # take a random action\n",
     "env.close()\n",
