fix tutorials with mjc native calls

--- a/docs/source/tutorials/3_Analyse_movements.ipynb
+++ b/docs/source/tutorials/3_Analyse_movements.ipynb
@@ -19,23 +19,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pth = '../../../myosuite/agents/baslines_NPG/myoHandPoseRandom-v0/2022-02-27_11-03-32/10_env=myoHandPoseRandom-v0,seed=2/iterations/'\n",
-    "policy = pth+\"best_policy.pickle\"\n",
+    "# from stable_baselines3 import PPO\n",
+    "# policy = \"ElbowPose_policy.zip\"\n",
     "\n",
-    "import pickle\n",
-    "pi = pickle.load(open(policy, 'rb'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = gym.make('myoHandPoseRandom-v0')\n",
+    "# pi = PPO.load(policy)\n",
+    "\n",
+    "from stable_baselines3 import PPO\n",
+    "env = gym.make('myoElbowPose1D6MRandom-v0')\n",
     "\n",
     "env.reset()\n",
-    "print('List of cameras available',env.sim.model.camera_names)\n"
+    "pi = PPO(\"MlpPolicy\", env, verbose=0)\n",
+    "\n",
+    "\n",
+    "pi.learn(total_timesteps=1000)\n"
    ]
   },
   {
@@ -48,11 +44,9 @@
     "for _ in range(10): # 10 episodes\n",
     "    for _ in range(100): # 100 samples for each episode\n",
     "        o = env.get_obs()\n",
-    "        a = pi.get_action(o)[0]\n",
+    "        a = pi.predict(o)[0]\n",
     "        next_o, r, done, ifo = env.step(a) # take a random action\n",
-    "        \n",
-    "        next_o, r, done, ifo = env.step(a)\n",
-    "            \n",
+    "                    \n",
     "        data_store.append({\"action\":a.copy(), \n",
     "                            \"jpos\":env.sim.data.qpos.copy(), \n",
     "                            \"mlen\":env.sim.data.actuator_length.copy(), \n",
@@ -97,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install sklearn\n",
+    "!pip install scikit-learn\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import NMF\n",
     "\n",
@@ -140,9 +134,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myoSuite_dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "myosuite_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -154,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
