move SAR to tutorials

--- a/docs/source/tutorials/SAR/SAR tutorial.ipynb
+++ b/docs/source/tutorials/SAR/SAR tutorial.ipynb
@@ -66,6 +66,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bec8c8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_env(env_name, episodes=10, timesteps=50):\n",
+    "    \"\"\"\n",
+    "    Displays any mp4 video within the notebook.\n",
+    "    \n",
+    "    video_path: str; path to mp4\n",
+    "    video_width: str; optional; size to render video\n",
+    "    \"\"\"\n",
+    "    env = gym.make(env_name)\n",
+    "    # get rid of skin         \n",
+    "    geom_1_indices = np.where(env.sim.model.geom_group == 1)\n",
+    "    env.sim.model.geom_rgba[geom_1_indices, 3] = 0\n",
+    "    frames = []\n",
+    "    for __ in tqdm(range(episodes)):\n",
+    "        env.reset()\n",
+    "        # get muscle activations         \n",
+    "        for _ in range(timesteps):\n",
+    "            frame = env.sim.renderer.render_offscreen(width=640, height=480,camera_id='side_view')\n",
+    "            frames.append(frame)\n",
+    "            act = env.action_space.sample()\n",
+    "            a,b,c,d= env.step(act) # take a random action\n",
+    "    env.close()\n",
+    "\n",
+    "    # make a local copy\n",
+    "    skvideo.io.vwrite(f'test_env_temp.mp4', np.asarray(frames),outputdict={\"-pix_fmt\": \"yuv420p\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2fff195",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "test_env('myoLegStairTerrainWalk-v0', episodes=1, timesteps=25)\n",
+    "show_video('test_env_temp.mp4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cbc2a7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_video(env_name, model_path, env_path, episodes, video_name, determ=False, \n",
+    "            pca=None, ica=None, scaler=None, phi=None, is_sar=False, syn_nosyn=False):\n",
+    "    frames = []\n",
+    "    if is_sar:\n",
+    "        if syn_nosyn:\n",
+    "            env = SynNoSynWrapper(gym.make(env_name), ica, pca, scaler, phi)\n",
+    "        else:\n",
+    "            env = SynergyWrapper(gym.make(env_name), ica, pca, scaler)\n",
+    "    else:\n",
+    "        env = gym.make(env_name)\n",
+    "\n",
+    "\n",
+    "    camera = 'side_view'\n",
+    "        \n",
+    "    for i,__ in tqdm(enumerate(range(episodes))):              \n",
+    "        env.reset()\n",
+    "\n",
+    "        model = SAC.load(model_path)\n",
+    "        vec = VecNormalize.load(env_path, DummyVecEnv([lambda: env]))\n",
+    "        \n",
+    "        rs = 0\n",
+    "        is_solved = []\n",
+    "        done = False\n",
+    "        for _ in range(1000):\n",
+    "            o = vec.normalize_obs(env.get_obs())\n",
+    "            a, __ = model.predict(o, deterministic=determ)\n",
+    "            \n",
+    "            frame = env.sim.renderer.render_offscreen(width=640, height=480,camera_id=camera)\n",
+    "            frames.append(frame)\n",
+    "\n",
+    "            next_o, r, done, info = env.step(a)\n",
+    "            is_solved.append(info['solved'])\n",
+    "            \n",
+    "            rs+=r\n",
+    "    env.close()\n",
+    "    skvideo.io.vwrite(f'{video_name}.mp4', np.asarray(frames),outputdict={\"-pix_fmt\": \"yuv420p\"})\n",
+    "    \n",
+    "ica,pca,norm = load_locomotion_SAR()\n",
+    "env_path = 'multihill_terrain_syn_env_myoLegWalkHillyTerrain-v0_3'\n",
+    "model_path = 'multihill_terrain_syn_model_myoLegWalkHillyTerrain-v0_3.zip'\n",
+    "get_video('Test-v0',model_path,env_path,1,'test',pca=pca,ica=ica,scaler=norm,is_sar=True)\n",
+    "show_video('test.mp4')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fc299ac0",
    "metadata": {},
@@ -330,7 +427,7 @@
    "id": "0d60f8d5",
    "metadata": {},
    "source": [
-    "### Train with SAR on a more challenging task (Reorient100)"
+    "### Train with SAR on a more challenging task"
    ]
   },
   {
@@ -348,7 +445,7 @@
    "source": [
     "<div style=\"width:100%;\">\n",
     "    <img src=\"./SAR_images/pol arch.png\" alt=\"Policy Architecture\" style=\"width:700px; display:block; margin-left:auto; margin-right:auto;\"/>\n",
-    "</div>"
+    "</div."
    ]
   },
   {
@@ -520,7 +617,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9e29fc68",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "train('myoLegWalk-v0', 'play_period', 1.5e6, '0')"
@@ -613,14 +712,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d5e8237",
+   "id": "e101f52b",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "SAR_RL(env_name=f'myoLeg{new_terrain}TerrainWalk-v0', policy_name='SAR-RL', timesteps=2e6, \n",
+    "SAR_RL(env_name=f'myoLeg{new_terrain}TerrainWalk-v0', policy_name='SAR-RL', timesteps=2.5e6, \n",
     "       seed='0', ica=ica, pca=pca, normalizer=normalizer, phi=.66, syn_nosyn=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d6f812b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video_name = 'walk_SAR-RL_video'\n",
+    "\n",
+    "get_vid(name='SAR-RL', env_name=f'myoLeg{new_terrain}TerrainWalk-v0', seed='0', episodes=5, video_name=video_name, \n",
+    "        determ=False, pca=pca, ica=ica, normalizer=normalizer, phi=.66, is_sar=True, syn_nosyn=False)\n",
+    "\n",
+    "show_video(f\"{video_name}.mp4\")"
    ]
   },
   {
@@ -640,7 +754,7 @@
    },
    "outputs": [],
    "source": [
-    "train(f'myoLeg{new_terrain}TerrainWalk-v0', 'RL-E2E', 3.5e6, '0')"
+    "train(f'myoLeg{new_terrain}TerrainWalk-v0', 'RL-E2E', 4e6, '0')"
    ]
   },
   {
@@ -830,7 +944,7 @@
     "video_name = 'SAR_vid'\n",
     "\n",
     "get_vid(name='SAR-RL', env_name='myoHandReorient100-v0', seed='0', episodes=10, video_name=video_name, \n",
-    "        determ=True, pca=pca, ica=ica, scaler=normalizer, phi=.66, is_sar=True, syn_nosyn=True)\n",
+    "        determ=True, pca=pca, ica=ica, normalizer=normalizer, phi=.66, is_sar=True, syn_nosyn=True)\n",
     "show_video(f\"{video_name}.mp4\")"
    ]
   },
