--- a/docs/source/tutorials/SAR/SAR tutorial.ipynb
+++ b/docs/source/tutorials/SAR/SAR tutorial.ipynb
@@ -444,7 +444,7 @@
    "metadata": {},
    "source": [
     "<div style=\"width:100%;\">\n",
-    "    <img src=\"./SAR_images/pol arch.png\" alt=\"Policy Architecture\" style=\"width:700px; display:block; margin-left:auto; margin-right:auto;\"/>\n",
+    "    <img src=\"./SAR_images/pol_arch.png\" alt=\"Policy Architecture\" style=\"width:700px; display:block; margin-left:auto; margin-right:auto;\"/>\n",
     "</div."
    ]
   },
