fix HTML rendering issue

--- a/docs/source/tutorials/SAR/SAR tutorial.ipynb
+++ b/docs/source/tutorials/SAR/SAR tutorial.ipynb
@@ -445,7 +445,7 @@
    "source": [
     "<div style=\"width:100%;\">\n",
     "    <img src=\"./SAR_images/pol_arch.png\" alt=\"Policy Architecture\" style=\"width:700px; display:block; margin-left:auto; margin-right:auto;\"/>\n",
-    "</div."
+    "</div>"
    ]
   },
   {
