--- a/docs/source/tutorials/SAR/SAR tutorial.ipynb
+++ b/docs/source/tutorials/SAR/SAR tutorial.ipynb
@@ -617,7 +617,7 @@
    "outputs": [],
    "source": [
     "# randomly choose terrain to learn, or manually choose one\n",
-    "new_terrain = np.random.choice(['Hilly', 'Stairs', 'Rough'])\n",
+    "new_terrain = np.random.choice(['Hilly', 'Stair', 'Rough'])\n",
     "# new_terrain = ...\n",
     "print(f'myoLeg{new_terrain}TerrainWalk-v0 selected for training.')"
    ]
