Fixed 4b Reflex and updated params

--- a/docs/source/tutorials/4b_reflex/MyoSuite_MyoReflex_Walk.ipynb
+++ b/docs/source/tutorials/4b_reflex/MyoSuite_MyoReflex_Walk.ipynb
@@ -22,6 +22,8 @@
     "from base64 import b64encode\n",
     "from IPython.display import HTML\n",
     "\n",
+    "from myosuite.utils.quat_math import quat2euler\n",
+    "\n",
     "def show_video(video_path, video_width = 500):\n",
     "    video_file = open(video_path, \"r+b\").read()\n",
     "    video_url = f\"data:video/mp4;base64,{b64encode(video_file).decode()}\"\n",
@@ -32,9 +34,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4174146e",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sim_time = 5 # in seconds\n",
@@ -50,8 +50,8 @@
     "Myo_env.set_control_params(params)\n",
     "\n",
     "for timestep in range(steps):\n",
-    "    frame = Myo_env.env.sim.render(width=500, height=500,mode='offscreen',camera_name='front_view')\n",
-    "    frames.append(frame[::-1,:,:])\n",
+    "    frame = Myo_env.env.sim.renderer.render_offscreen(camera_id=1)\n",
+    "    frames.append(frame)\n",
     "    _, isDone, _, _ = Myo_env.run_reflex_step()\n",
     "\n",
     "    if isDone:\n",
@@ -63,14 +63,6 @@
     "# show in the notebook\n",
     "show_video(\"MyoReflex_output.mp4\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75b0781c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -89,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
