Update tutorial 6_Inverse_Dynamics
No need to use ctrl for rendering, mjVIS_ACTIVATION (flag in position 5) has this purpose

--- a/docs/source/tutorials/6_Inverse_Dynamics.ipynb
+++ b/docs/source/tutorials/6_Inverse_Dynamics.ipynb
@@ -249,7 +249,7 @@
         "options_ref.geomgroup[1:] = 0\n",
         "options_ach = mujoco.MjvOption()\n",
         "options_ach.flags[:] = 0\n",
-        "options_ach.flags[4] = 1 # actuator ON\n",
+        "options_ach.flags[[4,5]] = 1 # actuator and activation ON\n",
         "options_ach.geomgroup[1:] = 0\n",
         "renderer = mujoco.Renderer(model)\n",
         "renderer.scene.flags[:] = 0\n",
@@ -262,13 +262,9 @@
         "    renderer.update_scene(data_ref, camera=camera, scene_option=options_ref)\n",
         "    pixels_ref = renderer.render()\n",
         "    # ---- ach related\n",
-        "    # required activations are directly set without going through ctrl (which is\n",
-        "    # indeed set to act only to show actuator activations in the video, and then\n",
-        "    # reset to 0 before the next mj_step occurs)\n",
-        "    data_ach.ctrl = 0\n",
+        "    # required activations are directly set without going through ctrl\n",
         "    data_ach.act = acts[idx, :]\n",
         "    mujoco.mj_step(model, data_ach)\n",
-        "    data_ach.ctrl = acts[idx, :]\n",
         "    renderer.update_scene(data_ach, camera=camera, scene_option=options_ach)\n",
         "    pixels_ach = renderer.render()\n",
         "    # ---- merging\n",
