Tutorial 6_Inverse_Dynamics updated - QP solver over ctrl

--- a/docs/source/tutorials/6_Inverse_Dynamics.ipynb
+++ b/docs/source/tutorials/6_Inverse_Dynamics.ipynb
@@ -3,32 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aWZ_2IAdeMbW"
-      },
-      "source": [
-        "# Installations"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EKLYluhuUKma",
-        "outputId": "c697ef91-1712-402f-d782-57ca99f18c67"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install git+https://github.com/facebookresearch/myosuite.git\n",
-        "!pip install tqdm\n",
-        "%env MUJOCO_GL=egl"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "6YC339udeSMh"
       },
       "source": [
@@ -37,24 +11,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "HnDtiLaLUDOQ"
       },
       "outputs": [],
       "source": [
         "from myosuite.simhive.myo_sim.test_sims import TestSims as loader\n",
-        "import scipy.optimize as optimize\n",
+        "from qpsolvers import solve_qp\n",
         "from copy import deepcopy\n",
         "from tqdm import tqdm\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import skvideo.io\n",
-        "import mujoco\n",
-        "import mujoco.viewer\n",
-        "import csv\n",
-        "import sys\n",
-        "import os"
+        "import mujoco"
       ]
     },
     {
@@ -64,33 +34,65 @@
       },
       "source": [
         "# Introduction and core function\n",
-        "In this tutorial a target trajectory will be replicated by MyoHand using MuJoCo inverse dynamics, i.e., given a sequence of joint angles *qpos*, a sequence of muscle activations *act* will be generated.\n",
-        "To achieve this goal, the following optimization problem will be solved at each time step:\n",
-        "\n",
+        "In this tutorial a target trajectory will be replicated by MyoHand using MuJoCo inverse dynamics, i.e., given a sequence of joint angles *qpos*, a sequence of control *ctrl* will be generated. The following describes how the ***get_ctrl*** function works.\n",
+        "The equation to solve for *ctrl*, accordingly to muscle actuators dynamics (https://mujoco.readthedocs.io/en/latest/modeling.html#muscles), is:\n",
         "$$\n",
-        "\\begin{align*}\n",
-        "\\min_{act}~&\\|~moment~\\cdot~(gain~*~act~+~bias)~-~qfrc~\\| \\\\\n",
-        "s.t.~~& 0 \\leq~act~\\leq~1 \\\\\n",
-        "& act_{t}~-~act_{t-1}~\\leq~0.1\n",
-        "\\end{align*}\n",
+        "AM\\cdot\\left(gain\\odot\\left(act+timestep\\cdot\\frac{ctrl-act}{\\tau}\\right)+bias\\right)-qfrc=0\\tag{1}\n",
         "$$\n",
-        "\n",
-        "The last constraint is to prevent *act* to change too much w.r.t. the previous state.\n",
-        "\n",
-        "The resulting muscle activations must be set directly on the actuators, without going through *ctrl*, since muscle filter dynamics is not taken into account in the optimization problem (see https://mujoco.readthedocs.io/en/stable/modeling.html#muscles). Therefore, in the next section, actuator dynamics is initialized as simple integrator (instead of muscle filter)."
+        "where\n",
+        "$$\n",
+        "\\tau=\\tau_D+(\\tau_A-\\tau_D)\\cdot sigmoid\\left(\\frac{ctrl-act}{tausmooth}+0.5\\right)\n",
+        "$$\n",
+        "To find a solution quickly, it is better to reformulate the equation and solve a quadratic program (QP), i.e.:\n",
+        "$$\n",
+        "\\min_{x} \\frac{1}{2}x^TPx+q^Tx~~~s.t.~~~lb\\leq x\\leq ub\\tag{2}\n",
+        "$$\n",
+        "The major obstacle to this formulation is the sigmoid in the calculation of $\\tau$. MuJoCo implements the sigmoid using the polynomial $6x^5-15x^4+10x^3$ clipped between 0 and 1. To solve the QP, the sigmoid is approximated here with $1.875x-0.4375$ and, to limit its range for a good approximation, *tausmooth* is set to 5. The target equation can then be rewritten as:\n",
+        "$$\n",
+        "AM\\cdot\\left(gain\\odot\\left(act+timestep\\cdot\\frac{ctrl-act}{(ctrl-act)\\cdot \\tau_1+\\tau_2}\\right)+bias\\right)-qfrc=0\\tag{3}\n",
+        "$$\n",
+        "where\n",
+        "$$\n",
+        "\\tau_1=\\frac{\\tau_A-\\tau_D}{tausmooth}\\cdot 1.875,~~~\\tau_2=(\\tau_A+\\tau_D)\\cdot 0.5\n",
+        "$$\n",
+        "and consequently reformulated as:\n",
+        "$$\n",
+        "AM\\cdot x+k=0\\tag{4}\n",
+        "$$\n",
+        "where\n",
+        "$$\n",
+        "x=\\left(timestep\\cdot gain\\odot\\frac{ctrl-act}{(ctrl-act)\\cdot \\tau_1+\\tau_2}\\right),~~~k=AM\\cdot(gain\\odot act)+AM\\cdot bias-qfrc\n",
+        "$$\n",
+        "Referring to equation $(2)$ then:\n",
+        "$$\n",
+        "P=2\\cdot AM^T\\cdot AM\\tag{5}\n",
+        "$$\n",
+        "$$\n",
+        "q=2\\cdot AM^T\\cdot k\\tag{6}\n",
+        "$$\n",
+        "$$\n",
+        "lb=timestep\\cdot gain\\odot\\frac{1-act}{(1-act)\\cdot \\tau_1 + \\tau_2}\\tag{7}\n",
+        "$$\n",
+        "$$\n",
+        "ub=timestep\\cdot gain\\odot\\frac{-act}{-act\\cdot \\tau_1 + \\tau_2}\\tag{8}\n",
+        "$$\n",
+        "After solving the QP for *x*, *ctrl* is then calculated as:\n",
+        "$$\n",
+        "ctrl = act + \\frac{x\\cdot\\tau_2}{timestep\\cdot gain-x\\cdot\\tau_1}\\tag{9}\n",
+        "$$"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "gqTH6NTJUDOV"
       },
       "outputs": [],
       "source": [
-        "def get_act(model, data, target_qpos):\n",
+        "def get_ctrl(model, data, target_qpos):\n",
         "    \"\"\"\n",
-        "    Compute the muscle activations needed to reach the target position in the next mujoco step.\n",
+        "    Compute the control needed to reach the target position in the next mujoco step.\n",
         "    \"\"\"\n",
         "    data_copy = deepcopy(data)\n",
         "    # ---- qfrc computation\n",
@@ -99,12 +101,10 @@
         "    mujoco.mj_forward(model, data_copy)\n",
         "    data_copy.qacc = 0\n",
         "    mujoco.mj_inverse(model, data_copy)\n",
-        "    qfrc = data_copy.qfrc_inverse.copy()\n",
-        "    # ---- act computation\n",
+        "    qfrc = data_copy.qfrc_inverse\n",
+        "    # ---- params computation\n",
         "    gain = np.array([])\n",
         "    bias = np.array([])\n",
-        "    bounds = []\n",
-        "    bounds_margin = 0.10\n",
         "    for idx_actuator in range(model.nu):\n",
         "        length = data_copy.actuator_length[idx_actuator]\n",
         "        lengthrange = model.actuator_lengthrange[idx_actuator]\n",
@@ -113,11 +113,26 @@
         "        prmb = model.actuator_biasprm[idx_actuator,:9]\n",
         "        prmg = model.actuator_gainprm[idx_actuator,:9]\n",
         "        bias = np.append(bias, mujoco.mju_muscleBias(length, lengthrange, acc0, prmb))\n",
-        "        gain = np.append(gain, mujoco.mju_muscleGain(length, velocity, lengthrange, acc0, prmg))\n",
-        "        bounds.append((max(0, data.act[idx_actuator]-bounds_margin), min(1, data.act[idx_actuator]+bounds_margin)))\n",
-        "    cost_function = lambda act: np.linalg.norm((gain * act + bias) @ data_copy.actuator_moment - qfrc)\n",
-        "    result = optimize.minimize(cost_function, data.act, method='SLSQP', bounds=tuple(bounds))\n",
-        "    return result.x"
+        "        gain = np.append(gain, min(-1, mujoco.mju_muscleGain(length, velocity, lengthrange, acc0, prmg)))\n",
+        "    tA = model.actuator_dynprm[:,0] * (0.5 + 1.5 * data.act)\n",
+        "    tD = model.actuator_dynprm[:,1] / (0.5 + 1.5 * data.act)\n",
+        "    tausmooth = model.actuator_dynprm[:,2]\n",
+        "    AM = data_copy.actuator_moment.T\n",
+        "    ts = model.opt.timestep\n",
+        "    act = data.act\n",
+        "    ctrl0 = data.ctrl\n",
+        "    # ---- ctrl computation\n",
+        "    t1 = (tA - tD) * 1.875 / tausmooth\n",
+        "    t2 = (tA + tD) * 0.5\n",
+        "    P = 2 * AM.T @ AM\n",
+        "    k = AM @ (gain * act) + AM @ bias - qfrc\n",
+        "    q = 2 * k @ AM\n",
+        "    lb = gain * (1 - act) * ts / (t2 + t1 * (1 - act))\n",
+        "    ub = - gain * act * ts / (t2 - t1 * act)\n",
+        "    x0 = (gain * (ctrl0 - act) * ts) / ((ctrl0 - act) * t1 + t2)\n",
+        "    x = solve_qp(P, q, lb=lb, ub=ub, initvals=x0, solver=\"osqp\")\n",
+        "    ctrl = act + x * t2 / (gain * ts - x * t1)\n",
+        "    return np.clip(ctrl,0,1)"
       ]
     },
     {
@@ -131,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "mHhY8syiUDOW"
       },
@@ -139,13 +154,9 @@
       "source": [
         "# ---- initializations\n",
         "model = loader.get_sim(None, 'hand/myohand.xml')\n",
-        "model.actuator_dyntype = mujoco.mjtDyn.mjDYN_INTEGRATOR # instead of mjDYN_MUSCLE\n",
+        "model.actuator_dynprm[:,2] = 5 # tausmooth\n",
         "data = mujoco.MjData(model)\n",
-        "data_folder = '6_data/'\n",
-        "input_file = '6_trajectory.csv'\n",
-        "output_file = '6_activations.csv'\n",
-        "traj = pd.read_csv(data_folder+input_file).values\n",
-        "all_act = np.array([mujoco.mj_id2name(model, mujoco.mju_str2Type('actuator'.encode(sys.getdefaultencoding())), i) for i in range(model.nu)])"
+        "traj = pd.read_csv('data\\\\6_trajectory.csv').values"
       ]
     },
     {
@@ -157,26 +168,12 @@
       "outputs": [],
       "source": [
         "# ---- main loop\n",
-        "for idx in tqdm(range(traj.shape[0])):\n",
+        "all_ctrl = np.zeros(model.nu)\n",
+        "for idx in (pbar := tqdm(range(traj.shape[0]))):\n",
         "    target_qpos = traj[idx, 1:]\n",
-        "    act = get_act(model, data, target_qpos)\n",
-        "    all_act = np.vstack((all_act, act))\n",
-        "    data.act = act\n",
+        "    data.ctrl = get_ctrl(model, data, target_qpos)\n",
+        "    all_ctrl = np.vstack((all_ctrl, data.ctrl))\n",
         "    mujoco.mj_step(model, data)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2sRj5zwvUDOX"
-      },
-      "outputs": [],
-      "source": [
-        "# ---- output saving\n",
-        "with open(data_folder+output_file, 'w', encoding='UTF8', newline='') as f:\n",
-        "    writer = csv.writer(f)\n",
-        "    writer.writerows(all_act)"
       ]
     },
     {
@@ -190,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "id": "nGNlOqeqUDOY"
       },
@@ -209,21 +206,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Ggmcno4sUDOZ"
-      },
-      "outputs": [],
-      "source": [
-        "# ---- camera settings\n",
-        "AZIMUTH = 166.553\n",
-        "DISTANCE = 1.178\n",
-        "ELEVATION = -36.793\n",
-        "LOOKAT = [-0.93762553, -0.34088276, 0.85067529]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -232,46 +214,43 @@
       },
       "outputs": [],
       "source": [
-        "# ---- video generation\n",
+        "# ---- initializations\n",
         "data_ref = mujoco.MjData(model) # data for reference trajectory\n",
         "data_ach = mujoco.MjData(model) # data for achieved trajectory\n",
-        "traj = pd.read_csv(data_folder+input_file).values\n",
-        "acts = pd.read_csv(data_folder+output_file).values\n",
-        "output_video = '6_output_video.mp4'\n",
-        "\n",
+        "# ---- camera settings\n",
         "camera = mujoco.MjvCamera()\n",
-        "camera.azimuth = AZIMUTH\n",
-        "camera.distance = DISTANCE\n",
-        "camera.elevation = ELEVATION\n",
-        "camera.lookat = np.array(LOOKAT)\n",
+        "camera.azimuth = 166.553\n",
+        "camera.distance = 1.178\n",
+        "camera.elevation = -36.793\n",
+        "camera.lookat = np.array([-0.93762553, -0.34088276, 0.85067529])\n",
         "options_ref = mujoco.MjvOption()\n",
         "options_ref.flags[:] = 0\n",
         "options_ref.geomgroup[1:] = 0\n",
         "options_ach = mujoco.MjvOption()\n",
         "options_ach.flags[:] = 0\n",
-        "options_ach.flags[[4,5]] = 1 # actuator and activation ON\n",
+        "options_ach.flags[4] = 1 # actuator ON\n",
         "options_ach.geomgroup[1:] = 0\n",
         "renderer = mujoco.Renderer(model)\n",
         "renderer.scene.flags[:] = 0\n",
-        "\n",
+        "# ---- generation loop\n",
         "frames = []\n",
-        "for idx in tqdm(range(traj.shape[0])):\n",
-        "    # ---- ref related\n",
+        "for idx in (pbar := tqdm(range(traj.shape[0]))):\n",
+        "    # ---- reference trajectory\n",
         "    data_ref.qpos = traj[idx, 1:]\n",
         "    mujoco.mj_step(model, data_ref)\n",
         "    renderer.update_scene(data_ref, camera=camera, scene_option=options_ref)\n",
         "    pixels_ref = renderer.render()\n",
-        "    # ---- ach related\n",
-        "    # required activations are directly set without going through ctrl\n",
-        "    data_ach.act = acts[idx, :]\n",
+        "    # ---- achieved trajectory\n",
+        "    data_ach.ctrl = all_ctrl[idx+1, :]\n",
         "    mujoco.mj_step(model, data_ach)\n",
         "    renderer.update_scene(data_ach, camera=camera, scene_option=options_ach)\n",
         "    pixels_ach = renderer.render()\n",
-        "    # ---- merging\n",
+        "    # ---- merging \n",
         "    pixels = np.append(pixels_ref, pixels_ach, axis=1)\n",
         "    frames.append(pixels)\n",
-        "\n",
-        "skvideo.io.vwrite(data_folder+output_video, np.asarray(frames),outputdict={\"-pix_fmt\": \"yuv420p\"})"
+        "# ---- writing\n",
+        "output_name = 'videos/myohand_freemovement.mp4'\n",
+        "skvideo.io.vwrite(output_name, np.asarray(frames),outputdict={\"-pix_fmt\": \"yuv420p\"})"
       ]
     },
     {
@@ -297,7 +276,7 @@
       },
       "outputs": [],
       "source": [
-        "show_video(data_folder+output_video)"
+        "show_video(output_name)"
       ]
     }
   ],
