Tutorial 6_ID updated - osqp instead of qpsolvers to ease installation
osqp was already the used solver from before, but the installation of qpsolvers also involve other methods, as scs, which dependencies are not found for macOS. osqp is therefore now used directly.

--- a/docs/source/tutorials/6_Inverse_Dynamics.ipynb
+++ b/docs/source/tutorials/6_Inverse_Dynamics.ipynb
@@ -18,13 +18,14 @@
       "outputs": [],
       "source": [
         "from myosuite.simhive.myo_sim.test_sims import TestSims as loader\n",
-        "from qpsolvers import solve_qp\n",
+        "import scipy.sparse as spa\n",
         "from copy import deepcopy\n",
         "from tqdm import tqdm\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import skvideo.io\n",
-        "import mujoco"
+        "import mujoco\n",
+        "import osqp"
       ]
     },
     {
@@ -84,6 +85,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def solve_qp(P, q, lb, ub, x0):\n",
+        "    P = spa.csc_matrix(P)\n",
+        "    A = spa.csc_matrix(spa.eye(q.shape[0]))\n",
+        "    m = osqp.OSQP()\n",
+        "    m.setup(P=P, q=q, A=A, l=lb, u=ub, verbose=False)\n",
+        "    m.warm_start(x=x0)\n",
+        "    res = m.solve()\n",
+        "    return res.x"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 37,
       "metadata": {
         "id": "gqTH6NTJUDOV"
@@ -130,7 +147,7 @@
         "    lb = gain * (1 - act) * ts / (t2 + t1 * (1 - act))\n",
         "    ub = - gain * act * ts / (t2 - t1 * act)\n",
         "    x0 = (gain * (ctrl0 - act) * ts) / ((ctrl0 - act) * t1 + t2)\n",
-        "    x = solve_qp(P, q, lb=lb, ub=ub, initvals=x0, solver=\"osqp\")\n",
+        "    x = solve_qp(P, q, lb, ub, x0)\n",
         "    ctrl = act + x * t2 / (gain * ts - x * t1)\n",
         "    return np.clip(ctrl,0,1)"
       ]
