Tutorial 6_ID minor updates

--- a/docs/source/tutorials/6_Inverse_Dynamics.ipynb
+++ b/docs/source/tutorials/6_Inverse_Dynamics.ipynb
@@ -25,7 +25,8 @@
         "import numpy as np\n",
         "import skvideo.io\n",
         "import mujoco\n",
-        "import osqp"
+        "import osqp\n",
+        "import os"
       ]
     },
     {
@@ -170,10 +171,13 @@
       "outputs": [],
       "source": [
         "# ---- initializations\n",
+        "tausmooth = 5\n",
         "model = loader.get_sim(None, 'hand/myohand.xml')\n",
-        "model.actuator_dynprm[:,2] = 5 # tausmooth\n",
+        "model.actuator_dynprm[:,2] = tausmooth\n",
+        "model_test = loader.get_sim(None, 'hand/myohand.xml')\n",
+        "model_test.actuator_dynprm[:,2] = tausmooth\n",
         "data = mujoco.MjData(model)\n",
-        "traj = pd.read_csv('data\\\\6_trajectory.csv').values"
+        "traj = pd.read_csv('data/6_trajectory.csv').values"
       ]
     },
     {
@@ -233,7 +237,7 @@
       "source": [
         "# ---- initializations\n",
         "data_ref = mujoco.MjData(model) # data for reference trajectory\n",
-        "data_ach = mujoco.MjData(model) # data for achieved trajectory\n",
+        "data_ach = mujoco.MjData(model_test) # data for achieved trajectory\n",
         "# ---- camera settings\n",
         "camera = mujoco.MjvCamera()\n",
         "camera.azimuth = 166.553\n",
@@ -248,7 +252,10 @@
         "options_ach.flags[4] = 1 # actuator ON\n",
         "options_ach.geomgroup[1:] = 0\n",
         "renderer = mujoco.Renderer(model)\n",
+        "renderer_test = mujoco.Renderer(model_test)\n",
         "renderer.scene.flags[:] = 0\n",
+        "renderer_test.scene.flags[:] = 0\n",
+        "\n",
         "# ---- generation loop\n",
         "frames = []\n",
         "for idx in (pbar := tqdm(range(traj.shape[0]))):\n",
@@ -257,15 +264,18 @@
         "    mujoco.mj_step(model, data_ref)\n",
         "    renderer.update_scene(data_ref, camera=camera, scene_option=options_ref)\n",
         "    pixels_ref = renderer.render()\n",
+        "\n",
         "    # ---- achieved trajectory\n",
         "    data_ach.ctrl = all_ctrl[idx+1, :]\n",
-        "    mujoco.mj_step(model, data_ach)\n",
-        "    renderer.update_scene(data_ach, camera=camera, scene_option=options_ach)\n",
-        "    pixels_ach = renderer.render()\n",
+        "    mujoco.mj_step(model_test, data_ach)\n",
+        "    renderer_test.update_scene(data_ach, camera=camera, scene_option=options_ach)\n",
+        "    pixels_ach = renderer_test.render()\n",
+        "\n",
         "    # ---- merging \n",
         "    pixels = np.append(pixels_ref, pixels_ach, axis=1)\n",
         "    frames.append(pixels)\n",
         "# ---- writing\n",
+        "os.makedirs('videos', exist_ok = True)\n",
         "output_name = 'videos/myohand_freemovement.mp4'\n",
         "skvideo.io.vwrite(output_name, np.asarray(frames),outputdict={\"-pix_fmt\": \"yuv420p\"})"
       ]
